// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TagLabel component should render latest latest correctly 1`] = `
<span
  className="pf-c-label pf-m-blue pf-m-outline versionLabel"
>
  <span
    className="pf-c-label__content"
  >
    latest
  </span>
</span>
`;

exports[`TagLabel component should render next tag correctly 1`] = `
<span
  className="pf-c-label pf-m-blue pf-m-outline versionLabel"
>
  <span
    className="pf-c-label__content"
  >
    next
  </span>
</span>
`;
